feat: ReAct Agent — JudgeNode拆分/空结果重试/反编造/流式打字效果
- 新增 JudgeNode 拆分充分性判断与规划职责，Planner 专注规划
- Observer 空结果检测：全部为空触发1-2次扩大搜索重试，最新步骤为空fallback到judgeNode
- Executor 反编造规则：禁止坐标填0、非工具步骤输出ask_user、重试提示下扩大搜索
- Planner 重规划必须换思路，不重复已失败路径
- Text2SQL 移除"确实没有数据"结论，交Observer判断是否重试
- AnswerNode 查询范围透明化 + 禁止暴露内部ID/SQL/表名
- ToolContext 跨线程传递userId解决异步场景ThreadLocal丢失
- 前端SSE流式打字效果：answer事件不再覆盖逐字流式消息，setTimeout控制token间隔
- 新增空状态字段 emptyResultRetries / judgeFeedback